# -*- Mode: Makefile; indent-tabs-mode: t; tab-width: 2 -*-
#
# This file is part of Déjà Dup.
# © 2008,2009,2010 Michael Terry <mike@mterry.name>
#
# Déjà Dup is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# Déjà Dup is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Déjà Dup.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = deja-dup

DOC_PAGES = \
	backup-auto.page \
	backup-first.page \
	backup.page \
	index.page \
	prefs.page \
	restore-full.page \
	restore-lost.page \
	restore.page \
	restore-revert.page

DOC_LINGUAS = ar cs da de en_GB es fi fr gl he hu id ja lt nb nl ps ru sv tr

dist-hook: doc-dist-hook
